--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -8,4 +8,9 @@
     text-align: center;
     background-color: #eeeeee;
     border: 0.02rem solid #cccccc;
+    
+}
+html,body,div,ul,li {
+    padding: 0;
+    margin: 0;
 }
