--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -9,6 +9,10 @@
     border: 0.02rem solid #cccccc;
     
 }
+img {
+    width: 100%;
+    height: 100%;
+}
 html,body,div,ul,li {
     padding: 0;
     margin: 0;
