--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -6,7 +6,7 @@
     font-size: 0.28rem;
     color: #333333;
     background-color: #eeeeee;
-    border: 0.02rem solid #cccccc;
+    // border: 0.02rem solid #cccccc;
     
 }
 img {
@@ -16,4 +16,5 @@ img {
 html,body,div,ul,li {
     padding: 0;
     margin: 0;
+    list-style: none;
 }
